<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/dzine_solution"
        android:textColor="@color/soft_blue"
        android:textSize="30dp">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:text="@string/login"

        android:textSize="40sp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"

        android:text="@string/please_sign_in_to_continue"

        android:textSize="20sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_box"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"

            android:src="@drawable/ic_user"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="12dp"
            android:background="@android:color/transparent"
            android:hint="@string/user_name"





            android:layout_weight="80"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_box"
        android:layout_marginTop="20dp"

        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"

            android:src="@drawable/ic_lock"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="12dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"

            android:layout_weight="80"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>




    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="#65AFEA"
        android:textSize="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/soft_blue"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="OnClick" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="10dp"
            android:text="@string/not_account"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:onClick="singIn"
            android:textColor="@color/soft_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>